Redesigned chat messages (alignment, no avatar), fixed final(?) scroll issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -193,6 +193,10 @@ ol.ads {
         li.message {
             margin-left: 5.5em;
         }
+        li.message[data-from='self'] {
+            margin-right: 5.5em;
+            margin-left: .2em;
+        }
         li.unread {
             border: 1px solid $highlight-color;
         }
